# bareduckdb

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .sanitizer-thread-suppressions.txt  MANIFEST.in  README.md  pyproject.toml  run_benchmarks.sh  setup.py
.github/workflows/: README_ACT.md  benchmarks.yml  build_wheels.yml  codspeed.yml  dev_versions.yml  sanitizers.yml
bareduckdb/compat/: connection_compat.py  result_compat.py
bareduckdb/core/: __init__.py  connection_api.py  connection_base.py  registration.py
bareduckdb/core/impl/: arrow_cardinality.hpp  connection.pxd  connection.pyx  cpp_helpers.hpp
bareduckdb/dataset/: __init__.py  backend.py
bareduckdb/dataset/impl/: arrow_scan_dataset.hpp  dataset.pyx  statistics_converter.pxd  statistics_cpp.hpp
benchmark/: benchmark.py  generate_data.py  run_case.py
benchmark/cases/filter/: filter_medium.sql
benchmark/cases/groups/: single_group.sql
benchmark/cases/limit/: limit 100k.sql  limit_1k.sql  topn_inline_5m.sql  topn_large.sql  topn_medium.sql  topn_small.sql
benchmark/cases/threading/: group_aggregate.sql  registered_arrow_scan.sql  self_join.sql  window_function.sql
benchmark/cases/types/: decimal.sql  hugeint.sql  mixed_types.sql  timestamp.sql  varchar_long.sql
benchmark/cases/window/: single_window.sql
benchmark/data/DATA_CATEGORY_DATE_PRICE/: create.sql
benchmark/data/DATA_RANGE/: create.sql
benchmark/stats/: benchmark_statistics.py  create_benchmark_data.py  run_statistics_case.py
benchmark/stats/cases/statistics/: multi_join_aggregate.sql
src/bareduckdb/common/impl/: filter_types.hpp  holder_scan.pyx  unified_data_scan.hpp
src/bareduckdb/compat/: connection_compat.py  result_compat.py
src/bareduckdb/core/: __init__.py  appender.py  connection_api.py  connection_base.py
src/bareduckdb/core/impl/: appender.pxd  appender.pyx  connection.pxd  connection.pyx  cpp_helpers.hpp  result.pyx
src/bareduckdb/data_sources/: __init__.py  arrow_holder.py  polars_holder.py
src/bareduckdb/dataset/: __init__.py  backend.py
tests/: conftest.py
tests/aio/: test_aio_basic.py
tests/benchmarks/: compare_results.py  conftest.py  data_setup.py  test_bench_arrow_conversion.py  test_bench_queries.py  test_simple_timing.py  test_sql_cases.py
tests/benchmarks/cases/aggregation/: group_aggregate.sql  group_aggregate_filtered.sql  single_group.sql
tests/benchmarks/cases/filters/: complex_filter.sql  filter_medium.sql  string_comparison.sql  string_equality.sql  string_in_clause.sql
tests/benchmarks/cases/limits/: limit_1k.sql  topn_large.sql  topn_medium.sql  topn_small.sql
tests/benchmarks/cases/statistics/: filter_date.sql  filter_numeric.sql
tests/benchmarks/cases/types/: timestamp_arithmetic.sql
tests/benchmarks/cases/window/: partition_topn.sql  window_function.sql
tests/comparison/: conftest.py  test_arrow_duckdb_parquet.py  test_arrow_schema_compatibility.py  test_dbapi.py
tests/compat/: test_compat_basic.py  test_cursor_shared_database.py  test_install_load_extension.py
tests/core/: test_appender.py  test_arrow_in.py  test_config.py  test_connect.py  test_parameters.py  test_raw_stream.py  test_register.py
tests/dataset/: conftest.py  test_dataset_backend.py  test_lazy_dataset.py
tests/dataset/basic/: test_dataset_basic.py  test_explain.py  test_registration_replacement.py
tests/dataset/filter/: test_filter_pushdown_types.py  test_nan_filter_pushdown.py
tests/downstream/: conftest.py  test_ibis.py  test_jupysql.py  test_magic_duckdb.py  test_sqlalchemy.py
tests/lazyframe/: test_lazyframe_pushdown.py
tests/polars/: test_polars_native.py
tests/polars_only/: test_nodep.py  test_pl_lazy.py  test_polars_roundtrip.py
tests/polars_pushdown/: test_polars_agg.py  test_polars_basic.py  test_polars_filters.py  test_polars_types.py
tests/statistics/: test_arrow_statistics.py  test_pandas_statistics.py  test_polars_statistics.py  test_polars_with_without_stats.py
tests/udtfs/: test_ast_helpers.py  test_dml_statements.py  test_replacement_scan.py  test_udtf_basic.py  test_udtf_edge_cases.py
tests/vortexdata/: test_core_vortex.py
